Features aus Java 21 verwenden